--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+
+    <title>Cat of the Day</title>
 
     <link rel="stylesheet" href="./styles/styles.css">
 
     <script src="./scripts/catOfTheDay.js" async defer></script>
+
+
 
 </head>
 <body>
 
     <main>
         <img class="logo" src="./assets/catlogo.png" alt="logo">
-        <img class="picture-frame" src="./assets/cats/cat1.png" alt="Picture Frame">
+        <img class="picture-frame" alt="Picture Frame">
         <div class="dark-div"></div>
-        <p class="emoji">😸</p>
+        <p class="emoji"></p>
         <div class="text">
             <h2 class="inspiration">@twothang</h2>
-            <p class="source"><span>image source: </span><span>miguelitolopez2002</span></p>
+            <p class="source"><span>image source: </span><span class="account-name"></span></p>
         </div>
         
     </main>
